--- a/packages/velox/package.json
+++ b/packages/velox/package.json
@@ -1,19 +1,20 @@
 {
   "name": "velox",
   "version": "0.0.1",
+  "type": "module",
   "description": "The fastest web framework in the universe",
-  "main": "./dist/velox.js",
-  "module": "./dist/velox.mjs",
+  "main": "./dist/velox.cjs",
+  "module": "./dist/velox.js",
   "types": "./dist/velox.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/velox.mjs",
-      "require": "./dist/velox.js",
+      "import": "./dist/velox.js",
+      "require": "./dist/velox.cjs",
       "types": "./dist/velox.d.ts"
     },
     "./jsx-runtime": {
-      "import": "./dist/jsx-runtime.mjs",
-      "require": "./dist/jsx-runtime.js",
+      "import": "./dist/jsx-runtime.js",
+      "require": "./dist/jsx-runtime.cjs",
       "types": "./dist/jsx-runtime.d.ts"
     }
   },
