Add jsx-dev-runtime and improve JSX typings for Velox
Introduces a new jsx-dev-runtime entry point for Velox, updates the Vite config and package exports to include it, and enhances the JSX namespace in jsx-runtime.ts with stricter typings and event support. Also updates the vanilla-ts template to use the react-jsx runtime with Velox as the import source, and pins TypeScript to 5.8.2 in the root package.json.

--- a/packages/create-velox/templates/vanilla-ts/tsconfig.json
+++ b/packages/create-velox/templates/vanilla-ts/tsconfig.json
@@ -15,10 +15,10 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "preserve",
-        "jsxFactory": "h",
-        "jsxFragmentFactory": "Fragment",
-        /* Linting */
+        /* Velox JSX - Brutally Strict */
+        "jsx": "react-jsx",
+        "jsxImportSource": "velox",
+        /* Linting - Safety First */
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
