--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@types/node": "^25.0.0",
     "prettier": "^3.7.4",
-    "typescript": "^5.9.3",
+    "typescript": "5.8.2",
     "vite": "^7.2.7",
     "vitest": "^4.0.15"
   }
