--- a/packages/velox/package.json
+++ b/packages/velox/package.json
@@ -16,6 +16,11 @@
       "import": "./dist/jsx-runtime.js",
       "require": "./dist/jsx-runtime.cjs",
       "types": "./dist/jsx-runtime.d.ts"
+    },
+    "./jsx-dev-runtime": {
+      "import": "./dist/jsx-dev-runtime.js",
+      "require": "./dist/jsx-dev-runtime.cjs",
+      "types": "./dist/jsx-dev-runtime.d.ts"
     }
   },
   "files": [
