Migrate packages to scoped @theremyyy namespace
Updated all package names and relevant references from unscoped to the @theremyyy scope for velox, vite-plugin-velox, and create-velox. Adjusted documentation, template dependencies, and import statements to reflect the new package scope.

--- a/packages/create-velox/package.json
+++ b/packages/create-velox/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "create-velox",
+    "name": "@theremyyy/create-velox",
     "version": "0.0.1",
     "description": "Scaffolding tool for Velox Framework",
     "bin": {
