--- a/packages/vite-plugin-velox/package.json
+++ b/packages/vite-plugin-velox/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-plugin-velox",
+  "name": "@theremyyy/vite-plugin-velox",
   "version": "0.0.1",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
