Add public publishConfig to package.json files
Set the publishConfig.access property to 'public' in the package.json files for create-velox, velox, and vite-plugin-velox packages to ensure they are published as public packages on npm.

--- a/packages/create-velox/package.json
+++ b/packages/create-velox/package.json
@@ -1,6 +1,9 @@
 {
     "name": "@theremyyy/create-velox",
     "version": "0.0.1",
+    "publishConfig": {
+        "access": "public"
+    },
     "description": "Scaffolding tool for Velox Framework",
     "bin": {
         "create-velox": "index.js",
