--- a/packages/vite-plugin-velox/package.json
+++ b/packages/vite-plugin-velox/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@theremyyy/vite-plugin-velox",
   "version": "0.0.1",
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
