chore: add READMEs and bump version to 0.0.2 for @remyyy packages

--- a/packages/velox/package.json
+++ b/packages/velox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@remyyy/velox",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "publishConfig": {
     "access": "public"
@@ -27,7 +27,8 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "scripts": {
     "build": "vite build && tsc",
