fix(packages): add files whitelist to vite-plugin-velox and bump versions

--- a/packages/vite-plugin-velox/package.json
+++ b/packages/vite-plugin-velox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@remyyy/vite-plugin-velox",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "publishConfig": {
     "access": "public"
   },
@@ -10,9 +10,14 @@
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     }
   },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "dev": "tsup src/index.ts --format cjs,esm --dts --watch"
